<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/main_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <RelativeLayout
            android:background="@drawable/login_ball"
            android:layout_marginStart="-100dp"
            android:layout_marginTop="-150dp"
            android:layout_width="400dp"
            android:layout_height="400dp" />

        <RelativeLayout
            android:layout_centerInParent="true"
            android:background="@drawable/login_ball"
            android:layout_width="160dp"
            android:layout_height="160dp" />

        <RelativeLayout
            android:background="@drawable/login_ball"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="-150dp"
            android:layout_marginBottom="-100dp"
            android:layout_width="300dp"
            android:layout_height="300dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:src="@drawable/logo"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:layout_width="180dp"
                android:layout_height="100dp"
                android:contentDescription="@string/capil_caption" />
            <View
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="200dp"
            android:gravity="center"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:textSize="14pt"
                android:textColor="#000"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/greycliff"
                android:text="@string/app_name" />
            <TextView
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#283FFF"
                android:fontFamily="@font/greycliff"
                android:textSize="8pt"
                android:text="@string/app_inst"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/txt_username"
                android:textColor="#282828"
                android:textColorHint="#808080"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:hint="@string/caption_login_email"
                android:layout_margin="20dp"
                android:fontFamily="@font/greycliff"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="@drawable/ui_edittext"
                android:textSize="17sp"
                android:inputType="text"
                android:importantForAutofill="no" />
            <EditText
                android:id="@+id/txt_password"
                android:textColor="#282828"
                android:textColorHint="#808080"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:hint="@string/caption_login_password"
                android:inputType="textPassword"
                android:layout_margin="20dp"
                android:fontFamily="@font/greycliff"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="@drawable/ui_edittext"
                android:textSize="17sp"
                android:importantForAutofill="no" />

            <android.widget.Button
                android:id="@+id/btn_login"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/greycliff"
                android:background="@drawable/ui_button_primary"
                android:text="@string/caption_login_btn_login"
                android:textColor="#fff"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginTop="20dp"
                android:textColor="#808080"
                android:fontFamily="@font/greycliff"
                android:text="@string/caption_login_btn_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <LinearLayout
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:fontFamily="@font/greycliff"
                android:layout_marginBottom="10dp"
                android:text="@string/powered_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageButton
                    android:layout_width="100dp"
                    android:layout_height="20dp"
                    android:background="@drawable/playstore"
                    android:contentDescription="@string/capil_caption"
                    tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <include android:id="@+id/progressLayout" layout="@layout/progress_layout_dark" />

</androidx.constraintlayout.widget.ConstraintLayout>